# stormbird

./: CHANGELOG.md  README.md
book/src/line_model/: input_power.md
book/src/sectional_models/: foil_model.md
book/src/utils/: control_system.md  wind_environment.md
interfaces/cfd_interfaces/cpp_actuator_line/: Cargo.toml
interfaces/fmus/stormbird_lifting_line/: Cargo.toml
interfaces/fmus/stormbird_lifting_line/src/: lib.rs
interfaces/pystormbird/: .gitignore  Cargo.toml
interfaces/pystormbird/examples/3 - rotor_sails/: README.md  multiple_rotors_multiple_wind_directions.py  rotor_sails_from_parquet.py  setup.py  single_rotor_multiple_spin_ratios.py  single_rotor_single_case.py  tillig_model.py
interfaces/pystormbird/examples/6 - simple sail comparison/: compare_sail_types.py
interfaces/pystormbird/pystormbird/: section_models.pyi  wind.pyi
interfaces/pystormbird/src/wind/: environment.rs
interfaces/stormbird_setup/src/stormbird_setup/direct_setup/: controller.py  input_power.py
interfaces/stormbird_setup/src/stormbird_setup/simplified_setup/: simple_sail_setup.py
stormbird/: Cargo.toml
stormbird/src/actuator_line/: builder.rs  mod.rs
stormbird/src/controller/: builder.rs  input.rs  mod.rs  output.rs  prelude.rs  set_points.rs
stormbird/src/lifting_line/complete_sail_model/: builder.rs  mod.rs
stormbird/src/line_force_model/: data_update.rs  input_power.rs
stormbird/src/wind/: environment.rs
