[package]
name = "stormbird"
version = "0.8.0"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "A library for modelling modern wind propulsion devices"
homepage = "https://github.com/NTNU-IMT/stormbird"
readme = "README.md"
repository = "https://github.com/NTNU-IMT/stormbird"
license = "GPL-3.0"
edition = "2021"

[dependencies]
stormath = { version = "0.2.0" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.9.1"
rayon = { version = "1.11.0", optional = true }

[features]
padded_spatial_vectors = ["stormath/padded_spatial_vectors"]
single_precision = ["stormath/single_precision"]
parallel = ["rayon"]
