[package]
name = "stormbird_lifting_line"
version = "0.8.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fmu_from_struct = { version = "0.2.1" }

stormbird = { version = "0.8.0"}
stormath = { version = "0.2.0"}
serde_json = "1.0.128"
serde = { version = "1.0.215", features = ["derive"] }

[features]
parallel = ["stormbird/parallel"]
